--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,15 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.3.0",
     "@prisma/client": "^6.1.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
