--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "pdfkit": "^0.16.0",
     "socket.io": "^4.8.1"
   }
 }
