--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@tailwindcss/vite": "^4.0.9",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
